--- a/src/duqtools/data/variables.yaml
+++ b/src/duqtools/data/variables.yaml
@@ -10,7 +10,7 @@
   type: IDS-variable
 - name: t_i_ave
   ids: core_profiles
-  path: profiles_1d/*/t_i_average
+  path: profiles_1d/*/t_i_ave
   dims: [time, x]
   type: IDS-variable
 - name: t_e_ave
