--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=CarbonCollective_fusion-dUQtools
-sonar.organization=carboncollective
+sonar.projectKey=duqtools_duqtools
+sonar.organization=duqtools
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=fusion-dUQtools
+#sonar.projectName=duqtools
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
