--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # - https://www.python.org/dev/peps/pep-0314/
 
 [metadata]
-author = Carbon Collective
+author = Stef Smeets
 author_email = s.smeets@esciencecenter.nl
 classifiers =
     Development Status :: 3 - Alpha
@@ -30,9 +30,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 name = duqtools
 project_urls =
-    Bug Tracker = https://github.com/carboncollective/duqtools/issues
+    Bug Tracker = https://github.com/duqtools/duqtools/issues
     Documentation = https://duqtools.readthedocs.io
-url = https://github.com/carboncollective/duqtools
+url = https://github.com/duqtools/duqtools
 version = 1.0.0
 
 [options]
