--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,11 +18,15 @@ nav:
   - Python API:
     - Public API: api.md
     - Operations: operations.md
-  - Examples:
+  - Notebooks:
     - examples/imas_handles.ipynb
     - examples/xarray.ipynb
     - examples/xarray-2D.ipynb
     - examples/xarray-ions.ipynb
+  - Scripts:
+    - scripts/modify_imas_data.md
+    - scripts/plot_with_altair.md
+    - scripts/plot_with_matplotlib.md
   - Contributing: CONTRIBUTING.md
   - Code of Conduct: CODE_OF_CONDUCT.md
   - 🔗 Source code: https://github.com/duqtools/duqtools
