--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@ sonar.projectKey=duqtools_duqtools
 sonar.organization=duqtools
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=duqtools
+sonar.projectName=duqtools
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
