--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,6 @@ sonar.sources=src
 #sonar.sourceEncoding=UTF-8
 
 sonar.python.version=3.7,3.8,3.9,3.10
+
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.pullrequest.github.summary_comment=false
