--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,22 +23,16 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest']
-        python-version: ['3.7']
+        python-version: ['3.7', '3.8', '3.9', '3.8', '3.9', '3.10']
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - uses: actions/cache@v2
-        with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.cfg') }}
+          cache: 'pip'
 
       - name: Python info
         run: |
@@ -47,18 +41,31 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install -e .[develop,dash]
+          python -m pip install --upgrade -e .[develop,dash]
 
       - name: Test with pytest
         run: python -m pytest
 
-        # - name: upload code coverage to codecov.io
-        #   if: always() || failure()
-        #   uses: codecov/codecov-action@v3
-        #   with:
-        #     token: ${{ secrets.CODECOV_TOKEN }} # optional, but more stable
-        #     files: ./coverage.xml
-        #     fail_ci_if_error: true # optional (default = false)
+      - uses: actions/cache@v3
+        with:
+          path: coverage.xml
+          key: ${{ github.sha }}-coverage
+
+
+  sonar:
+    name: SonarCloud Upload
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event.pull_request.draft == false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - uses: actions/cache@v3
+        with:
+          path: coverage.xml
+          key: ${{ github.sha }}-coverage
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
