--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade -e .[develop,dash]
+          python -m pip install -e .[develop,dash]
 
       - name: Test with pytest
         run: python -m pytest
