--- a/tests/test_data/config.yaml
+++ b/tests/test_data/config.yaml
@@ -22,7 +22,7 @@ create:
     - variable: zeff
       operator: add
       values: [1, 2, 3]
-    - variable: t_i_average
+    - variable: t_i_ave
       operator: multiply
       values: [1.1, 1.2, 1.3]
 system: jetto-duqtools
