Use importlib.resources for python>=3.8

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,14 +47,13 @@ install_requires =
     f90nml
     gitpython
     # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
-    importlib_resources
+    importlib_resources;python_version<'3.9'
     numpy
     pandas
     pydantic
     pydantic-yaml
     ruamel.yaml
     scipy
-    setuptools
     tqdm
     typing-extensions
     xarray
