Add conditional import for typing_extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ install_requires =
     ruamel.yaml
     scipy
     tqdm
-    typing-extensions
+    typing-extensions;python_version<'3.9'
     xarray
     jetto-tools >= 1.8.6
 
