Depend on `importlib_resources.files` implementation for 3.9

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,8 @@ install_requires =
     click
     gitpython
     # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
-    importlib_resources;python_version<'3.9'
+    # Note that the 3.9 stdlib implementation for `importlib.resources.files` fails with our case
+    importlib_resources;python_version<'3.10'
     numpy
     pandas
     pydantic
