Remove unused dependencies and conditionally depend on/import backports (#421)
* Use importlib.resources for python>=3.9
* Fix mypy issues (PEP 484)
* Remove `f90nml`, which has been replaced by `jetto-tools`
* Add conditional imports for typing_extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,19 +44,18 @@ include_package_data = True
 install_requires =
     altair
     click
-    f90nml
     gitpython
     # https://setuptools.pypa.io/en/latest/userguide/datafiles.html#accessing-data-files-at-runtime
-    importlib_resources
+    # Note that the 3.9 stdlib implementation for `importlib.resources.files` fails with our case
+    importlib_resources;python_version<'3.10'
     numpy
     pandas
     pydantic
     pydantic-yaml
     ruamel.yaml
     scipy
-    setuptools
     tqdm
-    typing-extensions
+    typing-extensions;python_version<'3.9'
     xarray
     jetto-tools >= 1.8.6
 
