--- a/setup.cfg
+++ b/setup.cfg
@@ -98,6 +98,7 @@ where = src
 [options.entry_points]
 console_scripts =
   duqtools = duqtools.cli:cli_entry
+  duqduq = duqtools.large_scale_validation.cli:cli_entry
 
 [coverage:run]
 branch = True
