--- a/setup.cfg
+++ b/setup.cfg
@@ -69,9 +69,9 @@ develop =
     yapf
     mypy
     # testing
+    coverage
     nbmake
     pytest
-    pytest-cov
     pytest-dependency
     pycodestyle
 docs =
@@ -107,7 +107,6 @@ data_file = .coverage
 
 [tool:pytest]
 testpaths = tests
-addopts = --cov --cov-report xml --cov-report term --cov-report html --cov-config setup.cfg
 norecursedirs=tests/helpers
 
 [mypy]
