--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
   test:
     name: ${{ matrix.os }}, ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
-    if: github.event.pull_request.draft == false
+    # if: github.event.pull_request.draft == false
     strategy:
       fail-fast: false
       matrix:
