--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,10 +33,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-#     - uses: actions/cache@v3
-#       with:
-#         path: ${{ env.pythonLocation }}
-#         key: ${{ env.pythonLocation }}-${{ hashFiles('setup.cfg') }}
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.cfg') }}
 
       - name: Python info
         run: |
@@ -45,7 +45,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade -e .[develop,dash]
+          python -m pip install -e .[develop,dash]
 
       - name: Test with pytest
         run: python -m pytest
