Add report and only update badge on main

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -84,14 +84,17 @@ jobs:
           coverage json
           export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
-          echo "### Total coverage: ${TOTAL}%\n" >> $GITHUB_STEP_SUMMARY
+          echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
+          echo $'\n```' >> $GITHUB_STEP_SUMMARY
           coverage report >> $GITHUB_STEP_SUMMARY
+          echo $'\n```' >> $GITHUB_STEP_SUMMARY
 
       - name: "Make badge"
-        uses: schneegans/dynamic-badges-action@v1.4.0
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: schneegans/dynamic-badges-action@v1.6.0
         with:
           auth: ${{ secrets.GIST_TOKEN }}
-          gistID: 33a1377f899ec2bd73a98f0f620febeb
+          gistID: ea916a5b3c3d9bc59065a7304e4ca707
           filename: covbadge.json
           label: Coverage
           message: ${{ env.total }}%
