--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,7 +50,7 @@ jobs:
       - name: Test with pytest
         run: coverage run -p -m pytest
 
-      - name: "Upload coverage data"
+      - name: Upload coverage data
         uses: actions/upload-artifact@v3
         with:
           name: covdata
@@ -61,24 +61,24 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: "Check out the repo"
-        uses: "actions/checkout@v2"
+      - name: Check out the repo
+        uses: actions/checkout@v2
 
-      - name: "Set up Python"
-        uses: "actions/setup-python@v4"
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: 3.10
 
-      - name: "Install dependencies"
+      - name: Install dependencies
         run: |
           python -m pip install coverage
 
-      - name: "Download coverage data"
+      - name: Download coverage data
         uses: actions/download-artifact@v3
         with:
           name: covdata
 
-      - name: "Combine"
+      - name: Combine
         run: |
           coverage combine
           coverage json
@@ -89,7 +89,7 @@ jobs:
           coverage report >> $GITHUB_STEP_SUMMARY
           echo $'\n```' >> $GITHUB_STEP_SUMMARY
 
-      - name: "Make badge"
+      - name: Make badge
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: schneegans/dynamic-badges-action@v1.6.0
         with:
