--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: '3.7'
 
       - name: Install additional dependencies
         run: |
