Implement proof-of-concept for large scale validation (#423)
* Implement proof-of-concept for creating ensemble of ensemble
* Implement merge / create cli commands
* Refactor common options parser to make it re-usable
* Set parent dir for Locations()
* Implement nested submit workflow
* Implement nested status command
* Increment IMAS run numbers for `data_in`/`data_out`

--- a/setup.cfg
+++ b/setup.cfg
@@ -99,6 +99,7 @@ where = src
 [options.entry_points]
 console_scripts =
   duqtools = duqtools.cli:cli_entry
+  duqduq = duqtools.large_scale_validation.cli:cli_entry
 
 [coverage:run]
 branch = True
