--- a/src/duqtools/data/variables.yaml
+++ b/src/duqtools/data/variables.yaml
@@ -1,7 +1,9 @@
+### Core profiles
+
 - name: rho_tor_norm
   ids: core_profiles
   path: profiles_1d/*/grid/rho_tor_norm
-  dims: [time, x]
+  dims: [time, $rho_tor_norm]
   type: IDS-variable
 - name: time
   ids: core_profiles
@@ -11,27 +13,154 @@
 - name: t_i_ave
   ids: core_profiles
   path: profiles_1d/*/t_i_average
-  dims: [time, x]
+  dims: [time, $rho_tor_norm]
   type: IDS-variable
 - name: zeff
   ids: core_profiles
   path: profiles_1d/*/zeff
-  dims: [time, x]
+  dims: [time, $rho_tor_norm]
   type: IDS-variable
-- name: major_radius
-  type: jetto-variable
-  lookup:
-    doc: Reference major radius (R0)
-    keys:
-    - field: EquilEscoRefPanel.refMajorRadius
-      file: jetto.jset
-    - field: RMJ
-      file: jetto.in
-      section: NLIST1
-    name: major_radius
-    type: float
-- name: t_start
-- name: t_end
+- name: n_e_tot
+  ids: core_profiles
+  path: profiles_1d/*/electrons/density
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: n_e
+  ids: core_profiles
+  path: profiles_1d/*/electrons/density_thermal
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: t_e
+  ids: core_profiles
+  path: profiles_1d/*/electrons/temperature
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: p_e
+  ids: core_profiles
+  path: profiles_1d/*/electrons/pressure
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: n_i_tot
+  ids: core_profiles
+  path: profiles_1d/*/n_i_thermal_total
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: n_i
+  ids: core_profiles
+  path: profiles_1d/*/ion/*/density_thermal
+  dims: [time, ion, $rho_tor_norm]
+  type: IDS-variable
+- name: n_i_tot
+  ids: core_profiles
+  path: profiles_1d/*/ion/*/density
+  dims: [time, ion, $rho_tor_norm]
+  type: IDS-variable
+- name: p_i
+  ids: core_profiles
+  path: profiles_1d/*/ion/*/pressure
+  dims: [time, ion, $rho_tor_norm]
+  type: IDS-variable
+- name: n_n
+  ids: core_profiles
+  path: profiles_1d/*/neutral/*/density
+  dims: [time, neutral, $rho_tor_norm]
+  type: IDS-variable
+- name: j_tot
+  ids: core_profiles
+  path: profiles_1d/*/j_total
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: j_ohm
+  ids: core_profiles
+  path: profiles_1d/*/j_ohmic
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: j_ni
+  ids: core_profiles
+  path: profiles_1d/*/j_non_inductive
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: q
+  ids: core_profiles
+  path: profiles_1d/*/q
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: smag
+  ids: core_profiles
+  path: profiles_1d/*/magnetic_shear
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: e_r
+  ids: core_profiles
+  path: profiles_1d/*/e_field/radial
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: e_par
+  ids: core_profiles
+  path: profiles_1d/*/e_field/parallel
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: omega_tor
+  ids: core_profiles
+  path: profiles_1d/*/rotation_frequency_tor_sonic
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+- name: collisionality
+  ids: core_profiles
+  path: profiles_1d/*/electrons/collisionality_norm
+  dims: [time, $rho_tor_norm]
+  type: IDS-variable
+
+### Core sources
+
+- name: energy_e_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/electrons/energy
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: particles_e_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/electrons/particles
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: energy_i_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/ion/*/energy
+  dims: [time_src, ion_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: particles_i_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/ion/*/particles
+  dims: [time_src, ion_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: energy_i_tot_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/total_ion_energy
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: j_par_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/j_parallel
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: tau_tor_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/momentum_tor
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: rho_tor_norm_src
+  ids: core_sources
+  path: source/0/profiles_1d/*/grid/rho_tor_norm
+  dims: [time_src, $rho_tor_norm_src]
+  type: IDS-variable
+- name: time_src
+  ids: core_sources
+  path: time
+  dims: [time_src]
+  type: IDS-variable
+
+### Equilibrium
+
 - name: beta_p_eq
   ids: equilibrium
   path: time_slice/*/global_quantities/beta_pol
@@ -65,225 +194,107 @@
 - name: psi_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/psi
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: p_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/pressure
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: f_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/f
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: j_tor_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/j_tor
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: j_par_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/j_parallel
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: beta_pol_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/beta_pol
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: q_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/q
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: smag_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/magnetic_shear
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: kappa_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/elongation
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: delta_upper_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/triangularity_upper
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: delta_lower_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/triangularity_lower
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: r_inner_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/r_inboard
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: r_outer_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/r_outboard
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: volume_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/volume
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: area_xs_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/area
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: area_surf_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/surface
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: rho_tor_norm_eq
   ids: equilibrium
   path: time_slice/*/profiles_1d/rho_tor_norm
-  dims: [time_eq, x]
+  dims: [time_eq, $rho_tor_norm_eq]
   type: IDS-variable
 - name: time_eq
   ids: equilibrium
   path: time
   dims: [time_eq]
   type: IDS-variable
-- name: n_e_tot
-  ids: core_profiles
-  path: profiles_1d/*/electrons/density
-  dims: [time, x]
-  type: IDS-variable
-- name: n_e
-  ids: core_profiles
-  path: profiles_1d/*/electrons/density_thermal
-  dims: [time, x]
-  type: IDS-variable
-- name: t_e
-  ids: core_profiles
-  path: profiles_1d/*/electrons/temperature
-  dims: [time, x]
-  type: IDS-variable
-- name: p_e
-  ids: core_profiles
-  path: profiles_1d/*/electrons/pressure
-  dims: [time, x]
-  type: IDS-variable
-- name: n_i_tot
-  ids: core_profiles
-  path: profiles_1d/*/n_i_thermal_total
-  dims: [time, x]
-  type: IDS-variable
-- name: n_i
-  ids: core_profiles
-  path: profiles_1d/*/ion/*/density_thermal
-  dims: [time, ion, x]
-  type: IDS-variable
-- name: n_i_tot
-  ids: core_profiles
-  path: profiles_1d/*/ion/*/density
-  dims: [time, ion, x]
-  type: IDS-variable
-- name: p_i
-  ids: core_profiles
-  path: profiles_1d/*/ion/*/pressure
-  dims: [time, ion, x]
-  type: IDS-variable
-- name: n_n
-  ids: core_profiles
-  path: profiles_1d/*/neutral/*/density
-  dims: [time, neutral, x]
-  type: IDS-variable
-- name: j_tot
-  ids: core_profiles
-  path: profiles_1d/*/j_total
-  dims: [time, x]
-  type: IDS-variable
-- name: j_ohm
-  ids: core_profiles
-  path: profiles_1d/*/j_ohmic
-  dims: [time, x]
-  type: IDS-variable
-- name: j_ni
-  ids: core_profiles
-  path: profiles_1d/*/j_non_inductive
-  dims: [time, x]
-  type: IDS-variable
-- name: q
-  ids: core_profiles
-  path: profiles_1d/*/q
-  dims: [time, x]
-  type: IDS-variable
-- name: smag
-  ids: core_profiles
-  path: profiles_1d/*/magnetic_shear
-  dims: [time, x]
-  type: IDS-variable
-- name: e_r
-  ids: core_profiles
-  path: profiles_1d/*/e_field/radial
-  dims: [time, x]
-  type: IDS-variable
-- name: e_par
-  ids: core_profiles
-  path: profiles_1d/*/e_field/parallel
-  dims: [time, x]
-  type: IDS-variable
-- name: omega_tor
-  ids: core_profiles
-  path: profiles_1d/*/rotation_frequency_tor_sonic
-  dims: [time, x]
-  type: IDS-variable
-- name: collisionality
-  ids: core_profiles
-  path: profiles_1d/*/electrons/collisionality_norm
-  dims: [time, x]
-  type: IDS-variable
-- name: energy_e_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/electrons/energy
-  dims: [time_src, x]
-  type: IDS-variable
-- name: particles_e_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/electrons/particles
-  dims: [time_src, x]
-  type: IDS-variable
-- name: energy_i_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/ion/*/energy
-  dims: [time_src, ion_src, x]
-  type: IDS-variable
-- name: particles_i_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/ion/*/particles
-  dims: [time_src, ion_src, x]
-  type: IDS-variable
-- name: energy_i_tot_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/total_ion_energy
-  dims: [time_src, x]
-  type: IDS-variable
-- name: j_par_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/j_parallel
-  dims: [time_src, x]
-  type: IDS-variable
-- name: tau_tor_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/momentum_tor
-  dims: [time_src, x]
-  type: IDS-variable
-- name: rho_tor_norm_src
-  ids: core_sources
-  path: source/0/profiles_1d/*/grid/rho_tor_norm
-  dims: [time_src, x]
-  type: IDS-variable
-- name: time_src
-  ids: core_sources
-  path: time
-  dims: [time_src]
-  type: IDS-variable
+
+### Jetto/other variables
+
+- name: major_radius
+  type: jetto-variable
+  lookup:
+    doc: Reference major radius (R0)
+    keys:
+    - field: EquilEscoRefPanel.refMajorRadius
+      file: jetto.jset
+    - field: RMJ
+      file: jetto.in
+      section: NLIST1
+    name: major_radius
+    type: float
+- name: t_start
+- name: t_end
