--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -1,10 +1,17 @@
 name: Tests in Imas Container
 
 on:
+  pull_request:
+    branches:
+      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
   push:
     branches:
       - main
-      - ci_imas_container
   workflow_dispatch:
 
 jobs:
