--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -40,13 +40,13 @@ jobs:
       - name: Create virtual environment
         run: |
           python -m venv .imasenv
-          . .imasenv/bin/activate
-          # Save environment for next steps
-          echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
-          echo "PATH=${PATH}" >> $GITHUB_ENV
 
       - name: Install dependencies
-        run: python -m pip install -e .[develop,dash]
+        run: |
+          . .imasenv/bin/activate
+          python -m pip install -e .[develop,dash]
 
       - name: Test with pytest
-        run: coverage run -p -m pytest
+        run: |
+          . .imasenv/bin/activate
+          coverage run -p -m pytest
