--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -20,7 +20,7 @@ jobs:
     name: ${{ matrix.os }}, ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     container:
-      image: gitlab.eufus.psnc.pl:5050/containerization/imas/imas-installer/rockylinux8.6/ual-fc2k
+      image: gitlab.eufus.psnc.pl:5050/containerization/imas/imas-installer/rockylinux8.6/ual
       options: --user root # only way to install tkinter, can be removed if jetto-tools fixed
       credentials:
         password: ${{ secrets.GITLAB_PSNC_TOKEN }}
@@ -53,13 +53,18 @@ jobs:
           echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
           echo "PATH=${PATH}" >> $GITHUB_ENV
 
-      - name: Test if imas is really available
-        run: python -m imas
-
       - name: Install dependencies
         run: |
           python -m pip install wheel
           python -m pip install -e .[develop,dash]
 
+      - name: Test if IMAS is really available
+        run: |
+          module load IMAS
+          python -m imas
+
+
       - name: Test with pytest
-        run: coverage run -p -m pytest
+        run: |
+          module load IMAS
+          coverage run -p -m pytest
