--- a/tests/test_data/template_model/jetto.in
+++ b/tests/test_data/template_model/jetto.in
@@ -3,16 +3,16 @@
 ================================================================================
 
 Application                    : JETTO
-JAMS Version                   : v210921_gateway_imas
-Date                           : 08/06/2022
-Time                           : 09:10:11
- 
+JAMS Version                   : v210921_gateway_v9
+Date                           : 04/10/2022
+Time                           : 13:34:04
+
 JAMS GIT information:-
 
-Current GIT repository         : /pfs/work/g2fkoech/cmg/jams/v210921_gateway_imas/java
+Current GIT repository         : /pfs/work/g2fkoech/cmg/jams/v210921_gateway_v9/java
 Current GIT release tag        : Release-v210921
-Current GIT branch             : fkochl/v210921_addons_31
-Last commit SHA1-key           : 3a4347b10268c12acc42ea7ac6e32692b102b84c
+Current GIT branch             : develop
+Last commit SHA1-key           : e3c394bb49496516b7c6d7cb404520a0591ca661
 Repository status              : Clean
 
 
@@ -21,39 +21,44 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST1
-  BCINTRHON=  0.9      ,
-  BCINTRHONSANCO=  0.9      ,
-  BTIN     =  2.73     ,  2.73     ,
-  CNIONT   =  1.0      ,
+  BCINTRHON=  0.95     ,
+  BCINTRHONSANCO=  0.95     ,
+  CECON    =  1.0      ,  1.0      ,  1.0      ,
+  CLHON    =  0.0      ,  5.0E-4   ,  5.0E-4   ,  0.0      ,  2.5E-4   ,
+              2.5E-4   ,  0.0      ,  0.0      ,
   CTOTEBW  =  +1.0     ,
-  CTOTEC   =  0.0      ,
+  CTOTEC   =  +1.0     ,
   CTOTLH   =  +1.0     ,
-  DNHB1    =  9.9999998E16,  9.9999998E16,
+  CURTI    =  0.0      ,  0.0      ,
+  DNHB1    =  9.9999998E12,  9.9999998E12,
   DTEC     =  0.0      ,
   DTMAX    =  0.001    ,
-  DTMIN    =  1e-12    ,
-  FTOENB   =  -1.0     ,
-  FTOERF   =  -1.0     ,
+  DTMIN    =  1.0E-12  ,
+  DTSAW    =  1.0      ,
+  FRFTOE   =  0.5      ,  0.5      ,  0.5      ,  0.5      ,  0.5      ,
+  FTOERF   =  1.0      ,
+  IBTSIGN  =  1        ,
   ICURB    =  0        ,
   IDEBUG   =  100      ,
   IDNHB1   =  0        ,
   IEQUOP   =  3        ,
-  IEXMOM   =  2        ,
+  IEXMOM   =  0        ,
   IEXNE    =  1        ,  0        ,
-  IEXPRA   =  2        ,
+  IEXPRA   =  0        ,
   IEXPV    =  0        ,
-  IEXQ     =  1        ,
+  IEXQ     =  2        ,
   IEXTE    =  1        ,
   IEXTI    =  1        ,
   IEXZEF   =  -2       ,
-  IFSOLVE  =  1        ,
+  IFSOLVE  =  0        ,
+  IPPFEQ   =  5        ,
   IRESTR   =  0        ,
   IRESTW   =  1        ,
-  ISPLITSANCOT=  300      ,
-  ISWCON   =  2        ,
+  ISPLITSANCOT=  350      ,
+  ISWCON   =  0        ,
   ISWEBW   =  0        ,
   ISWEC    =  0        ,
-  ISWEQU   =  6        ,
+  ISWEQU   =  5        ,
   ISWFBC   =  0        ,
   ISWLH    =  0        ,
   ISWNI    =  0        ,
@@ -61,16 +66,14 @@ Repository status              : Clean
   ISWRF    =  0        ,
   ITEB     =  0        ,
   ITIB     =  0        ,
-  ITORM    =  1        ,
-  IUPDPSI  =  1        ,
-  IVOLCORR =  0        ,
-  MACHID   =  'jet'    ,
-  NBTIN    =  2        ,
+  ITORM    =  0        ,
+  IUPDPSI  =  0        ,
+  MACHID   =  'aug'    ,
   NCRASH   =  0        ,
-  NCUR     =  0        ,
+  NCUR     =  2        ,
   NDNHB1   =  2        ,
   NDTMAX   =  2        ,
-  NGRID    =  101      ,
+  NGRID    =  51       ,
   NPELIN   =  0        ,
   NSYNC    =  0        ,
   NTEB     =  2        ,
@@ -78,26 +81,34 @@ Repository status              : Clean
   NTEC     =  0        ,
   NTIB     =  2        ,
   NTLH     =  0        ,
-  NTNI     =  0        ,
   NTPRAD   =  0        ,
-  NTRF     =  0        ,
+  NTRF     =  5        ,
   PDTMAX   =  1.0      ,  1.0      ,
-  PRAD     =  -1.0     ,
+  PECON    =  20.0     ,  20.0     ,  20.0     ,
+  PLHON    =  0.0      ,  0.001    ,  0.001    ,  0.0      ,  5.0E-4   ,
+              5.0E-4   ,  0.0      ,  0.0      ,
+  PPRAD    =  0.06     ,  0.48     ,  1.17     ,  1.78     ,  4.2      ,
+              5.5      ,  23.0     ,  23.0     ,
+  PRAD     =  1.0      ,
+  PRFON    =  0.0      ,  20.0     ,  20.0     ,  20.0     ,  20.0     ,
   PTOTEBW  =  -1.0     ,
-  PTOTEC   =  0.0      ,
+  PTOTEC   =  -1.0     ,
   PTOTLH   =  -1.0     ,
-  PTOTNI   =  -1.0     ,
-  RFINPO   =  -1.0     ,
-  RMJ      =  296      ,
-  SNBTOT   =  -1.0     ,  -1.0     ,
-  TBEG     =  48.35    ,
-  TBTIN    =  0.0      ,  1000.0   ,
+  RFINPO   =  1000000.0,
+  TBEG     =  5.25     ,
+  TCRASH   =  35.0     ,  700.0    ,
   TDNHB1   =  0.0      ,  1000.0   ,
   TDTMAX   =  0.0      ,  1000.0   ,
-  TEB      =  150.0    ,  150.0    ,
-  TIB      =  150.0    ,  150.0    ,
-  TMAX     =  49.0     ,
-  TQNIONT  =  1.0      ,
+  TEB      =  100.0    ,  100.0    ,
+  TECON    =  80.0     ,  80.1     ,  639.0    ,
+  TIB      =  200.0    ,  200.0    ,
+  TIMEC    =  0.0      ,  1000.0   ,
+  TLHON    =  41.0     ,  41.5     ,  41.9     ,  42.0     ,  42.1     ,
+              44.0     ,  44.1     ,  52.0     ,
+  TMAX     =  6.25     ,
+  TPRAD    =  1.3      ,  20.4     ,  39.4     ,  50.2     ,  80.0     ,
+              100.0    ,  160.0    ,  530.0    ,
+  TRFON    =  60.0     ,  60.1     ,  85.0     ,  85.5     ,  639.0    ,
   TTEB     =  0.0      ,  1000.0   ,
   TTIB     =  0.0      ,  1000.0   ,
  &END
@@ -110,30 +121,20 @@ Repository status              : Clean
  &NLIST2
   ISYNTHDIAG=  0        ,
   ITOUT    =  1        ,
-  KWFRAN   =  0        ,
+  KWFRAN   =  2        ,
   KWMAIN   =  1        ,
-  NTINT    =  101      ,
-  NTPR     =  99       ,
-  TPRINT   =  48.3565  ,  48.363   ,  48.3695  ,  48.376   ,  48.3825  ,
-              48.389   ,  48.3955  ,  48.402   ,  48.408497,  48.414997,
-              48.421497,  48.427998,  48.434498,  48.440998,  48.4475  ,
-              48.454   ,  48.4605  ,  48.467   ,  48.4735  ,  48.48    ,
-              48.4865  ,  48.493   ,  48.4995  ,  48.506   ,  48.512497,
-              48.518997,  48.525497,  48.531998,  48.538498,  48.545   ,
-              48.5515  ,  48.558   ,  48.5645  ,  48.571   ,  48.5775  ,
-              48.584   ,  48.5905  ,  48.597   ,  48.6035  ,  48.61    ,
-              48.6165  ,  48.622997,  48.629498,  48.635998,  48.642498,
-              48.649   ,  48.6555  ,  48.662   ,  48.6685  ,  48.675   ,
-              48.6815  ,  48.688   ,  48.6945  ,  48.701   ,  48.7075  ,
-              48.714   ,  48.7205  ,  48.727   ,  48.733498,  48.739998,
-              48.7465  ,  48.753   ,  48.7595  ,  48.766   ,  48.7725  ,
-              48.779   ,  48.7855  ,  48.792   ,  48.7985  ,  48.805   ,
-              48.8115  ,  48.818   ,  48.8245  ,  48.831   ,  48.8375  ,
-              48.843998,  48.8505  ,  48.857   ,  48.8635  ,  48.87    ,
-              48.8765  ,  48.883   ,  48.8895  ,  48.896   ,  48.9025  ,
-              48.909   ,  48.9155  ,  48.922   ,  48.9285  ,  48.935   ,
-              48.9415  ,  48.947998,  48.9545  ,  48.961   ,  48.9675  ,
-              48.974   ,  48.9805  ,  48.987   ,  48.9935  ,
+  NTINT    =  50       ,
+  NTPR     =  48       ,
+  TPRINT   =  5.270408 ,  5.2908163,  5.3112245,  5.3316326,  5.352041 ,
+              5.372449 ,  5.392857 ,  5.413265 ,  5.4336734,  5.4540815,
+              5.4744897,  5.494898 ,  5.515306 ,  5.535714 ,  5.5561223,
+              5.5765305,  5.5969386,  5.617347 ,  5.637755 ,  5.658163 ,
+              5.678571 ,  5.6989794,  5.719388 ,  5.7397957,  5.7602043,
+              5.780612 ,  5.8010206,  5.821429 ,  5.841837 ,  5.862245 ,
+              5.882653 ,  5.9030614,  5.9234695,  5.9438777,  5.964286 ,
+              5.984694 ,  6.005102 ,  6.0255103,  6.0459185,  6.0663266,
+              6.086735 ,  6.107143 ,  6.127551 ,  6.147959 ,  6.1683674,
+              6.1887755,  6.2091837,  6.229592 ,
  &END
 
 
@@ -142,18 +143,19 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST3
-  ACHIEBM  =           ,
-  ACHIIBM  =           ,
-  ADPBM    =           ,
-  ALFINW   =  0.0      ,  0.0      ,  0.0      ,
-  ALFP     =  1.0      ,  1.0      ,  1.0      ,
+  ACHIEBM  =  0.001    ,
+  ACHIIBM  =  0.001    ,
+  ADPBM    =  0.001    ,
+  ALFINW   =  0.0      ,  0.0      ,
+  ALFP     =  1.0      ,  1.0      ,
+  ASI      =  1e6      ,
   BARMIC   =  1.0E-04  ,
   BARMID   =  1.0E-04  ,  1.0E-04  ,
   BARMUL   =  0.0      ,
   BARWIT   =  0.0      ,
   CBOH     =  0.0      ,
   CBOOC    =  1.0      ,
-  CHIEMI   =  0.003    ,
+  CHIEMI   =  3.0E-3   ,
   CHIMNEO  =  0.0      ,
   CLAMBD   =  1.5      ,
   C_ALPHA_E=  0.0      ,
@@ -163,13 +165,14 @@ Repository status              : Clean
   C_SH_E   =  0.0      ,
   C_SH_I   =  0.0      ,
   DELJR    =  0.0      ,
-  DIFMI    =  0.003    ,  0.0      ,
-  FORMD    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
-  FORME    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
-  FORMI    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
-  FORMM    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
+  DIFMI    =  3.0E-3   ,  0.0      ,
+  FORMD    =  5000.0   ,  0.0      ,  0.15     ,
+  FORME    =  5000.0   ,  0.0      ,  0.15     ,
+  FORMI    =  5000.0   ,  0.0      ,  0.15     ,
+  FORMM    =  0.0      ,  0.0      ,  0.0      ,
   IBAR     =  0        ,
   IBARTM   =  1        ,
+  IBOHMOLD =  1        ,
   ICGTM    =  0        ,
   ICPTM    =  0        ,
   IEITB    =  0        ,
@@ -179,9 +182,10 @@ Repository status              : Clean
   IETBI    =  0        ,
   IETBM    =  0        ,
   IFORMD   =  0        ,
-  IFORME   =  0        ,
+  IFORME   =  2        ,
   IFORMI   =  0        ,
   IFORMM   =  0        ,
+  IGLF23SMSIGNCONS=  1        ,
   IGLFMOD  =  0        ,
   IGTM     =  0        ,
   IIITB    =  0        ,
@@ -201,6 +205,7 @@ Repository status              : Clean
   ISAW     =  0        ,
   ISAWTRG  =  0        ,
   ISINK    =  0        ,
+  ITRDOWNSC=  25       ,
   ITRGLFAL =  1        ,
   ITRGLFEB =  -1       ,
   ITRGLFSET=  1        ,
@@ -213,6 +218,7 @@ Repository status              : Clean
   ITRGSIMD =  0        ,
   ITRGSIMT =  1        ,
   ITRJM    =  1        ,
+  ITRTGLFSAT=  2        ,
   ITRTGLFSIM=  0        ,
   ITRTGLFSIMD=  0        ,
   ITRTGLFSIMT=  1        ,
@@ -250,16 +256,17 @@ Repository status              : Clean
   REDGE    =  1.0      ,  1.0      ,
   RITG     =  1.0      ,  1.0      ,
   RMIN1    =  0.0      ,
-  RNORMC   =  0.0      ,
-  RNORME   =  0.0      ,
+  RNORMC   =  2.88     ,
+  RNORME   =  2.88     ,
   RTEM     =  1.0      ,  1.0      ,
-  SMOOTH   =  0.0      ,
+  SMOOTH   =  4.0      ,
   TLH      =  0.0      ,
   TRGOMD   =  1.0      ,
   TRGOMT   =  0.75     ,
   TRGSIMD  =  1.0      ,
   TRGSIMT  =  0.75     ,
   TRJM     =  1.0      ,
+  TRMAXD   =  10.0e4   ,
   TRTGLFSIMD=  1.0      ,
   TRTGLFSIMT=  1.0      ,
   TRWLAMD  =  0.0      ,
@@ -272,16 +279,16 @@ Repository status              : Clean
   WDP2     =  0.3      ,  0.3      ,
   WELEC    =  0        ,
   WLAMD    =  0        ,
-  XEBOHM   =  0.05     ,
+  XEBOHM   =  0.1      ,
   XECDBM   =  0.0      ,
-  XEGBOHM  =  1.0      ,
+  XEGBOHM  =  0.1      ,
   XENEOAL  =  0.0      ,
-  XIBOHM   =  0.05     ,
+  XIBOHM   =  0.1      ,
   XICDBM   =  0.0      ,
-  XIGBOHM  =  1.0      ,
+  XIGBOHM  =  0.1      ,
   XINEOAL  =  0.0      ,
   XINEOCL  =  1.0      ,
-  ZDEL     =           ,
+  ZDEL     =  0.30     ,
   ZFRCONN  =  1.0      ,
  &END
 
@@ -291,32 +298,39 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &NLIST4
-  ALFI     =  1.0      ,  0.05     ,  0.0      ,  0.0      ,  0.0      ,
+  ALFI     =  1.0      ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
   ATM      =  2.0      ,
-  ATMI     =  9        ,  58       ,  0.0      ,  0.0      ,  0.0      ,
+  ATMI     =  12       ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
+  DNEFLFB  =  0.9e19   ,
   DNFRAC   =  1.0      ,
-  EWALLN   =  0.0      ,
-  ICOOR    =  4        ,
-  IFRANT   =  0        ,
+  EWALLN   =  100.0    ,
+  FNEFLFB  =  0.05     ,
+  IFLFB    =  3        ,
+  IFRANT   =  1        ,
   IRECY    =  1        ,
-  ISWFUS   =  0        ,
-  KSANST   =  1        ,
+  ISWFUS   =  1        ,
+  KWWRR    =  2        ,
   NBREMS   =  1        ,
-  NENE     =  0        ,
-  NIMP     =  2        ,
+  NENE     =  1        ,
+  NIMP     =  -1       ,
   NISH     =  1        ,
-  NSKWRR   =  0        ,
-  NTFLON   =  0        ,
+  NSKWRR   =  20       ,
+  NTFLON   =  -3       ,
   NTRECY   =  0        ,
-  NZEQ     =  4        ,  12       ,  0        ,  0        ,  0        ,
-              0        ,  0        ,
-  RECYC    =  0.0      ,  0.0      ,  0.0      ,  0.0      ,
-  RFINE    =  0.0      ,
-  WI       =  0.0      ,
+  NTZEFF   =  0        ,
+  PFLFB    =  4.49999991E15,  0.0      ,
+  PZEFF    =  3.17     ,  2.49     ,  2.0      ,  1.8      ,  1.7      ,
+              1.758    ,  1.762    ,  1.728    ,  2.94     ,  3.68     ,
+  RECYC    =  1.0D-06  ,  1.0D-06  ,  1.0D-06  ,  1.0D-06  ,
+  RFINE    =  5.0      ,
+  TFLON    =  5.25     ,
+  TZEFF    =  7.35     ,  10.0     ,  20.0     ,  30.0     ,  80.0     ,
+              144.0    ,  521.8    ,  650.0    ,  670.0    ,  695.0    ,
+  WI       =  13.8     ,
   ZEFF     =  -1.0     ,
-  ZIPI     =  4        ,  28       ,  0.0      ,  0.0      ,  0.0      ,
+  ZIPI     =  6        ,  0.0      ,  0.0      ,  0.0      ,  0.0      ,
               0.0      ,  0.0      ,
  &END
 
@@ -326,18 +340,9 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &INESCO
-  BAVT     =  0.985    ,
-  FPFASN   =  1.0      ,
-  IBNDJ    =  81       ,
-  K6EQU    =  4        ,
-  KBORET   =  0        ,
-  KCPROF   =  0        ,
-  KCURT    =  1000     ,
-  NEQU     =  -2       ,
-  NITEQ    =  300      ,
-  NL       =  62       ,
-  NPULSE   =  94875    ,
-  TIMEQU   =  48.35    ,  49.0     ,  0.010000023,
+  NEQU     =  3        ,
+  NPULSE   =  36982    ,
+  TIMEQU   =  2.85     ,  3.175    ,  3.5      ,
  &END
 
 
@@ -422,11 +427,18 @@ Repository status              : Clean
   ANTTYP   =  'ITER'   ,
   JS2PS    =  300      ,
   NANT     =  1        ,
-  NRPOLY   =  0        ,
-  NRUNT    =  0        ,
+  NEWCHA   =  2.0      ,
+  NEWCNS   =  0.01     ,
+  NEWMAS   =  3.0      ,
+  NRPOLY   =  2        ,
+  NRUNT    =  1        ,
   NSTRAP   =  4        ,
-  RFFREQ   =  0.0      ,
+  RFFREQ   =  5.3E7    ,
   RFPHAS   =  'OppO'   ,
+  RFPOWR   =  7000000.0,  7000000.0,
+  RFTIME   =  0.0      ,  1000000.0,
+  RTIMEE   =  1000000.0,
+  RTIMES   =  0.0      ,
  &END
 
 
@@ -445,19 +457,16 @@ Repository status              : Clean
  &QLK_TCI
   iqlk_set =  1        ,
   qlk_ETG  =  1        ,
-  qlk_NN_TEM=  1        ,
-  qlk_NN_model=  2        ,
-  qlk_NN_part_trans_switch=  1        ,
+  qlk_ETGmult=  0.33     ,
   qlk_coll_flag=  1        ,
-  qlk_collmult=  0.25     ,
-  qlk_em_stab=  1        ,
   qlk_gammaEmult=  1.0      ,
   qlk_gradumult=  1.0      ,
   qlk_kin_elec=  1        ,
   qlk_machmult=  1.0      ,
-  qlk_rhomax=  0.9      ,
+  qlk_rhomax=  0.95     ,
+  qlk_rhomin=  0.03     ,
   qlk_rot_flag=  0        ,
-  qlk_usenn=  1        ,
+  qlk_usenn=  0        ,
  &END
 
 
@@ -474,18 +483,16 @@ Repository status              : Clean
 --------------------------------------------------------------------------------
 
  &IMAS
-  IDSCOREPROFIN_ANGF=  1        ,
   IDSCOREPROFIN_NE=  1        ,
   IDSCOREPROFIN_Q=  1        ,
   IDSCOREPROFIN_TE=  1        ,
   IDSCOREPROFIN_TI=  1        ,
   IDSCOREPROFIN_ZEFF=  1        ,
-  IDSCORESOURCEIN_NBI=  1        ,
-  IDSCORESOURCEIN_RF=  1        ,
+  IDSCORESOURCEIN_ECRH=  1        ,
+  IDSCORESOURCEIN_RAD=  1        ,
   IDSCORETRANSPIN=  0        ,
-  IDSEQUILIN_CURRBNDCOND=  1        ,
   IDSEQUILIN_PSIRMSDEV=  0        ,
-  IDSSLICEUPDATEDT=  1.0      ,
+  IDSSLICEUPDATEDT=  0.1      ,
   IDSSUMMARYIN=  0        ,
  &END
 
