Inline python script

--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -117,7 +117,33 @@ jobs:
       - name: Combine
         run: |
           coverage combine
-          python .github/update_cov_db_paths.py
+
+      - name: Fix paths
+        shell: python
+        run: |
+          import sqlite3
+          from pathlib import Path
+
+          conn = sqlite3.connect('.coverage')
+          cwd = str(Path.cwd())
+
+          print(list(conn.execute('select * from file'))[0])
+
+          for (idx, path) in conn.execute('select * from file'):
+              new_path = path.replace('/__w/duqtools/duqtools', cwd)
+
+              q = 'update file set path = :new_path where id = :idx;'
+
+              conn.execute(q, {'idx': idx, 'new_path': new_path})
+
+          conn.commit()
+
+          print(list(conn.execute('select * from file'))[0])
+
+          conn.close()
+
+      - name: Report coverage
+        run: |
           coverage json
           export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
           echo "total=$TOTAL" >> $GITHUB_ENV
