Small enhancements for large scale validation (`duqduq`) (#477)
* Define run directory from template directly
* Add some documentation for duqduq
* Add command to print version + revision and exit
* Add info method to op queue
* Add queue support for `duqduq setup`
* Small refactor using new scipy method
* Fix `data.csv` overwritting input `data.csv` for `duqduq create`

--- a/setup.cfg
+++ b/setup.cfg
@@ -125,3 +125,6 @@ ignore_missing_imports = True
 [flake8]
 exclude = scripts
 max-line-length = 96
+
+[yapf]
+blank_line_before_nested_class_or_def = True
