Support running tests in docker container (#481)
* Update tests to be inline with containerized_runs
* Dashboard does not depend on duqtools.yaml
* Change dataset for testing
* Update in database location
* Fix plot test

Co-authored-by: Victor Azizi <victor@lipsum.eu>

--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -42,10 +42,15 @@ jobs:
       - name: Put the IMAS db in the right location
         run: |
           mkdir /opt/imas/shared
+          mkdir -p ${HOME}/public/
           ln -s `pwd`/containerized_runs/imasdb /opt/imas/shared/
+          ln -s `pwd`/containerized_runs/imasdb ${HOME}/public/imasdb
+          echo `pwd`/containerized_runs/imasdb
+          echo ${HOME}/public/imasdb
 
       - name: Python and Environment info
         run: |
+          whoami
           which python
           python --version
           pwd
@@ -75,6 +80,13 @@ jobs:
         run: |
           . /docker-entrypoint.sh
           python -m imas
+
+      - name: Test paths
+        shell: python
+        run: |
+          from duqtools.api import ImasHandle
+          print(ImasHandle.from_string('root/test/11111/6666').path())
+          print(ImasHandle.from_string('test/11111/4444').path())
 
       - name: Test with pytest
         run: |
